@@ -1,10 +1,13 @@
-CHANGES.txt - 2007-07-05
+CHANGES.txt - 2007-07-09
 ------------------------
 
 CHANGES IN CUPS V1.3
 
 	- Documentation updates (STR #1775, STR #2130, STR #2131,
 	  STR #2263, STR #2356, STR #2397)
+	- The CUPS sample driver PPDs are now generated by the PPD
+	  compiler and include all of the localized languages by
+	  default (STR #2164)
 	- You can now specify "AuthType Default" in the cupsd.conf
 	  file to use the default authentication defined by the
 	  DefaultAuthType directive.
